# TaskTrackerCLI

./: 1.json  CMakeLists.txt  README.md  algorithm.md  readme  task-cli  task-cli.cpp  test_task-cli.cpp
.github/instructions/: copilot-instructions.md  cs_tutor.instructions.md
include/: cli.hpp  json.hpp  task.hpp  utils.hpp
src/: cli.cpp  json.cpp  main.cpp  utils.cpp
